force-app/main/default/objects/Doctor__c/Doctor__c.object-meta.xml
<CustomObject>
    <description>Stores clinic doctors. Each doctor can have multiple appointments. Includes working hours and working days for scheduling.</description>
    <label>Doctor</label>
    <nameField>
        <label>Full Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Doctors</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>