force-app/main/default/objects/Doctor__c/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <description>Contact phone number of the doctor.</description>
    <label>Phone</label>
    <required>true</required>
    <type>Phone</type>
</CustomField>