force-app/main/default/objects/Doctor__c/fields/Specialization__c.field-meta.xml
<CustomField>
    <fullName>Specialization__c</fullName>
    <description>Medical specialty of the doctor.</description>
    <inlineHelpText>Medical specialty of the doctor.</inlineHelpText>
    <label>Specialization</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>General Practitioner</fullName>
            </value>
            <value>
                <fullName>Pediatrician</fullName>
            </value>
            <value>
                <fullName>Dermatologist</fullName>
            </value>
            <value>
                <fullName>Cardiologist</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>