force-app/main/default/objects/Doctor__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Link the doctor to the corresponding Salesforce user account.</description>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Doctors</relationshipName>
    <type>Lookup</type>
</CustomField>