force-app/main/default/objects/Doctor__c/fields/Working_Hours_End__c.field-meta.xml
<CustomField>
    <fullName>Working_Hours_End__c</fullName>
    <description>End time of doctor’s working hours for scheduling appointments.</description>
    <label>Working Hours End</label>
    <required>true</required>
    <type>Time</type>
</CustomField>