force-app/main/default/objects/Doctor__c/fields/Working_Hours_Start__c.field-meta.xml
<CustomField>
    <fullName>Working_Hours_Start__c</fullName>
    <description>Start time of the doctor’s working hours for scheduling appointments.</description>
    <label>Working Hours Start</label>
    <required>true</required>
    <type>Time</type>
</CustomField>